--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "self_mode": false,
-	"autobio": false,
+	"autobio": true,
 	"antihidetag": true,
 	"user_register": false,
 	"anti_delete" : false,
@@ -9,12 +9,12 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
+	"ownerNumber": "6281334093597",
+	"ownerNumberr": "6281334093597",
+	"cr": "@lewken",
+	"ownername": "lewken",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfcོ"
+	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @lewken"
 }
